fix: scrollbar style

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,20 +47,37 @@ a {
   text-decoration: none;
 }
 
-*::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 6px;
   height: 6px;
   border-radius: 10px;
 }
 
-*::-webkit-scrollbar-track {
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-blue-primary);
+  border-radius: 10px;
+  min-height: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-blue-primary);
+}
+
+::-webkit-scrollbar-track {
   background: var(--color-third);
   border-radius: 10px;
 }
 
-*::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-track-piece {
+  background: var(--color-third);
+}
+
+::-webkit-scrollbar-thumb:vertical {
   background-color: var(--color-blue-primary);
-  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  background-color: var(--color-blue-primary);
 }
 
 ::-webkit-calendar-picker-indicator {
